--- a/demo-app/src/overviewPage.css
+++ b/demo-app/src/overviewPage.css
@@ -23,3 +23,28 @@ img.brandLogo {
     margin: 10px;
     opacity: 0.7;
 }
+
+.recipe {
+    cursor: pointer;
+}
+
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.basePageContainer {
+    display: flex;
+    justify-content: center;
+}
+.basePage {
+    padding: 10px;
+    padding: 10px;
+    max-width: 1300px;
+}
