Finished recipePage && started working on cartPage

--- a/demo-app/src/recipePage.css
+++ b/demo-app/src/recipePage.css
@@ -6,3 +6,15 @@
 .container {
     overflow: auto;
 }
+
+
+button.addTo {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+
+button.backBtn {
+    padding: 10px;
+}
