--- a/demo-app/src/overviewPage.css
+++ b/demo-app/src/overviewPage.css
@@ -5,16 +5,20 @@
 }
 
 .recipies .recipe {
-    min-height: 300px;
-    /* background-color: red; */
+    width: 300px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-bottom: 20px;
 }
 
 .imageContainer {
     display: inherit;
+}
+
+.imageContainer img {
+    border-radius: 8px;
 }
 
 img.brandLogo {
@@ -47,4 +51,27 @@ img.brandLogo {
     padding: 10px;
     padding: 10px;
     max-width: 1300px;
+}
+
+.recipe .name {
+    text-align: center;
+}
+
+.cart {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+}
+
+.cart .cartAmount {
+    position: absolute;
+    /* color: red; */
+    background-color: #ff000099;
+    color: #ffffff;
+    padding: 1px 7px;
+    font-size: 11px;
+    border-radius: 60px;
+    font-weight: bolder;
+    margin-top: 8px;
+    margin-left: -10px;
 }
